Fix z-index issue with DatePicker calendar icon

--- a/app/webroot/js/components/DateTimePicker/DateTimePicker.css
+++ b/app/webroot/js/components/DateTimePicker/DateTimePicker.css
@@ -26,7 +26,6 @@
   position: absolute;
   right: 11px;
   top: 50%;
-  z-index: 1;
 }
 
 .DateInput .popover {
